tests/modules/success/0003-module-with-sig-and-var.ec
type t.

module type I = {
 proc f(x : t) : t 
}.

module M : I = {
 proc f(x:t) : t = { return x; }
}.
